# rules_flatbuffers

./: WORKSPACE
examples/: .bazelrc  WORKSPACE  cargo-bazel-lock.json
examples/rs_example/: BUILD.bazel  main.rs
examples/viz_fbs/: BUILD.bazel
flatbuffers/: crates.bzl  repositories.bzl  rs_flatbuffers_library.bzl
flatbuffers/internal/: run_flatc.bzl
flatbuffers/toolchain_defs/: rs_defs.bzl
